fixed z-index of  navbar

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -11,6 +11,7 @@
     background-color: white;
     top: 0;
     left: 0;
+    z-index: 1000;
   }
   .navbar #navlinks {
     display: flex;
